...
					</Dialog.Content>
				</Dialog>
			</Portal>

			<View
				style={globalStyles.container.home}
				testID='HomePage'
			>
				<View style={globalStyles.container.image}>
					<Image
						style={globalStyles.image.global}
						source={require('@/assets/images/logoReact.png')}
						testID='HomeLogo'
...
