...
						globalStyles.modalContentContainer.drawer,
						{
							backgroundColor: theme.colors.primaryContainer,
							minHeight: useWindowDimensions().height / 2,
						},
					]}
					testID='ChangePasswordModal'
				>
					<View
						style={{
							flex: 1,
							justifyContent: 'space-evenly',
						}}
...
									else setCurrentPasswordError(false);
								}}
								error={currentPasswordError}
								autoCapitalize='none'
								label={t('account.currentPassword')}
								secureTextEntry
								testID='CurrentPasswordInput'
							/>
							{currentPasswordError ? (
								<HelperText
									type='error'
									visible={currentPasswordError}
									style={globalStyles.text.errorHelper}
									testID='CurrentPasswordError'
								>
									{t('account.currentPasswordError')}
								</HelperText>
							) : null}
						</View>
						<View>
...
									else setNewPasswordError(false);
								}}
								error={newPasswordError}
								autoCapitalize='none'
								label={t('account.newPassword')}
								secureTextEntry
								testID='NewPasswordInput'
							/>
							{newPasswordError ? (
								<HelperText
									type='error'
									visible={newPasswordError}
									style={globalStyles.text.errorHelper}
									testID='NewPasswordError'
								>
									{t('account.newPasswordError')}
								</HelperText>
							) : null}
						</View>
						<View>
...
									else setConfirmNewPasswordError(false);
								}}
								error={confirmNewPasswordError}
								autoCapitalize='none'
								label={t('account.confirmNewPassword')}
								secureTextEntry
								testID='ConfirmNewPasswordInput'
							/>
							{confirmNewPasswordError ? (
								<HelperText
									type='error'
									visible={confirmNewPasswordError}
									style={globalStyles.text.errorHelper}
									testID='ConfirmNewPasswordError'
								>
									{t('account.confirmNewPasswordError')}
								</HelperText>
							) : null}
						</View>
					</View>
...
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.modal}
						labelStyle={globalStyles.buttonText.modal}
						icon='check-bold'
						mode='elevated'
						onPress={changePassword}
						testID='ChangePasswordButton'
					>
						{t('button.changePassword')}
					</Button>
				</Modal>
			</Portal>

...
								{
									height: useWindowDimensions().height / 10,
									marginTop: -insets.top,
								},
							]}
							source={require('@/assets/images/logoReact.png')}
							testID='DrawerLogo'
						/>

						<Divider
							style={{ marginVertical: 5 }}
							bold={true}
						/>
...
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							focused={currentRoute.includes('/home')}
							onPress={() => drawerItemPress('/home')}
							testID='HomeDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.addMember')}
							style={globalStyles.drawerStyle}
...
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							focused={currentRoute.includes('/addMember')}
							onPress={() => drawerItemPress('/addMember')}
							testID='AddDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.searchMember')}
							style={globalStyles.drawerStyle}
...
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							focused={currentRoute.includes('/searchMember')}
							onPress={() => drawerItemPress('/searchMember')}
							testID='SearchDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.updateMembers')}
							style={globalStyles.drawerStyle}
...
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							focused={currentRoute.includes('/updateMember')}
							onPress={() => drawerItemPress('/updateMembers')}
							testID='UpdateDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.importExport')}
							style={globalStyles.drawerStyle}
...
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							focused={currentRoute.includes('/importExport')}
							onPress={() => drawerItemPress('/importExport')}
							testID='ImportExportDrawerButton'
						/>
					</View>

					<Divider
						style={{ marginVertical: 5 }}
						bold={true}
...
									/>
								)}
							/>
							<Switch
								value={darkModeSwitch}
								onValueChange={changeColorScheme}
								testID='ThemeSwitch'
							/>
						</View>

						<TouchableOpacity
							style={{ marginLeft: -4, minHeight: 10 }}
							onPress={toggleAccordion}
							testID='LanguageButton'
						>
							<List.Item
								title={t('feature.language')}
								titleStyle={globalStyles.text.drawer}
								left={(props) => (
									<MaterialCommunityIcons
...
								<List.Item
									title={`${getFlagEmoji('GB')}     English`}
									onPress={() => {
										i18next.changeLanguage('en-US');
										AsyncStorage.setItem('language', 'en-US');
									}}
									testID='EnButton'
								/>
								<List.Item
									title={`${getFlagEmoji('PT')}     Português`}
									onPress={() => {
										i18next.changeLanguage('pt-PT');
										AsyncStorage.setItem('language', 'pt-PT');
									}}
									testID='PtButton'
								/>
							</View>
						</Animated.View>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
...
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							onPress={() =>
								showDialog({
									text: t('dialog.checkUpdate'),
									onConfirmation: () => checkUpdates(),
									testID: 'UpdateDialog',
								})
							}
							testID='UpdateAppDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.changePassword')}
							style={globalStyles.drawerStyle}
...
							)}
							inactiveTintColor={theme.colors.onBackground}
							activeTintColor={theme.colors.primary}
							inactiveBackgroundColor='transparent'
							pressColor='rgba(80, 80, 80, 0.32)'
							onPress={() => setChangePasswordModal(true)}
							testID='ChangePasswordDrawerButton'
						/>

						<DrawerItem
							labelStyle={globalStyles.text.drawer}
							label={t('button.signOut')}
							style={globalStyles.drawerStyle}
...
							onPress={() =>
								showDialog({
									text: t('account.signOutDialog'),
									onConfirmation: () => {
										signOut();
									},
									testID: 'SignOutDialog',
								})
							}
							testID='SignOutDrawerButton'
						/>
					</View>
					{/* <DrawerItemList {...props} /> */}
				</DrawerContentScrollView>

				<Divider
...
					bold={true}
				/>

				<View style={{ paddingBottom: insets.bottom + 5 }}>
					<Text
						style={globalStyles.text.footer}
						testID='VersionText'
					>
						{t('feature.version')}: {Constants.expoConfig?.version}
					</Text>
				</View>
			</View>
		</>
...
