...
showDialog({
	text: 'DialogText',
  onDismiss: () => {},
	onConfirmation: () => {},
	onDismissText: 'No',
	onConfirmationText: 'Yes',
	testID: 'DialogConfirmation',
});

hideDialog() */

type DialogOptions = {
	text: string;
...
							testID='DialogConfirmation'
						>
							{options?.onConfirmationText || t('dialog.yes')}
						</Button>
						<Button
							onPress={handleDismiss}
							testID='DialogDismiss'
						>
							{options?.onDismissText || t('dialog.no')}
						</Button>
					</Dialog.Actions>
				</Dialog>
			</Portal>
...
