{
	"language": "Language",
	"account": {
		"email": "Email",
		"emailError": "Email invalid!",
		"password": "Password",
		"passwordError": "Password must be at least 6 characters!",
		"currentPassword": "Current Password",
...
