appId: com.leandropata.membermanagementapp
---
- assertVisible:
    id: 'LoginPage'
- assertVisible:
    id: 'LoginLogo'
- assertVisible:
    id: 'EmailInput'
- assertVisible:
    id: 'PasswordInput'
- assertVisible:
    id: 'LoginButton'
- assertVisible:
    id: 'CreateAccountButton'

- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'EmailError'
- assertVisible:
    id: 'PasswordError'

- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- inputText: 'testtest.com'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'EmailError'
- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- eraseText

- inputText: 'test@testcom'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'EmailError'
- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- eraseText

- inputText: 'test@test.com'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertNotVisible:
    id: 'EmailError'
- assertVisible:
    id: 'PasswordError'

- tapOn:
    id: 'PasswordInput'
    retryTapIfNoChange: false
- inputText: 'pass'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'PasswordError'
- tapOn:
    id: 'PasswordInput'
    retryTapIfNoChange: false
- eraseText

- inputText: 'pass321'
- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- eraseText
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'EmailError'
- assertNotVisible:
    id: 'PasswordError'

- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- inputText: 'test@test.com'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false
- assertNotVisible:
    id: 'EmailError'
- assertNotVisible:
    id: 'PasswordError'

- tapOn:
    id: 'PasswordInput'
    retryTapIfNoChange: false
- inputText: 'pass123'
- tapOn:
    id: 'LoginButton'
    retryTapIfNoChange: false

- assertVisible:
    id: 'HomePage'
