appId: com.leandropata.membermanagementapp
---
- assertVisible:
    id: 'LoginPage'
- assertVisible:
    id: 'LoginLogo'
- assertVisible:
    id: 'EmailInput'
- assertVisible:
    id: 'PasswordInput'
- assertVisible:
    id: 'LoginButton'
- assertVisible:
    id: 'CreateAccountButton'

- tapOn:
    id: 'CreateAccountButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'EmailError'
- assertVisible:
    id: 'PasswordError'

- tapOn:
    id: 'EmailInput'
    retryTapIfNoChange: false
- inputRandomEmail
- tapOn:
    id: 'PasswordInput'
    retryTapIfNoChange: false
- inputText: 'testTest1234'
- tapOn:
    id: 'CreateAccountButton'
    retryTapIfNoChange: false
- assertNotVisible:
    id: 'EmailError'
- assertNotVisible:
    id: 'PasswordError'

- assertVisible:
    id: 'ConfirmPasswordModal'
- assertVisible:
    id: 'ConfirmPasswordInput'
- assertVisible:
    id: 'ConfirmSignUp'

- tapOn:
    id: 'ConfirmPasswordInput'
    retryTapIfNoChange: false
- inputRandomText
- tapOn:
    id: 'ConfirmSignUp'
    retryTapIfNoChange: false
- assertVisible:
    id: 'ConfirmPasswordError'

- tapOn:
    id: 'ConfirmPasswordInput'
    retryTapIfNoChange: false
- inputText: 'testTest1234'
- tapOn:
    id: 'ConfirmSignUp'
    retryTapIfNoChange: false

- assertVisible:
    id: 'HomePage'
- assertVisible:
    id: 'DrawerButton'

- tapOn:
    id: 'DrawerButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SignOutDrawerButton'

- tapOn:
    id: 'SignOutDrawerButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SignOutDialog'
- assertVisible:
    id: 'DialogConfirmation'
- assertVisible:
    id: 'DialogDismiss'
- tapOn:
    id: 'DialogConfirmation'
    retryTapIfNoChange: false
- assertNotVisible:
    id: 'SignOutDialog'
- assertNotVisible:
    id: 'DrawerLogo'
- assertNotVisible:
    id: 'HomePage'
- assertVisible:
    id: 'LoginPage'
- assertNotVisible:
    id: 'DrawerButton'
